--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
 <main class="container" id="join">
   <h2>Contact Us</h2>
   <section class="contact-info" aria-label="Contact information">
-    <p><strong>Phone:</strong> +91 9876543210, +91 9123456789</p>
+    <p><strong>Phone:</strong> +91 9876543210</p>
     <p><strong>Facebook:</strong> <a href="https://www.facebook.com/dxnindia" target="_blank" rel="noopener noreferrer" tabindex="0">DXN India</a></p>
     <p><strong>YouTube:</strong> <a href="https://www.youtube.com/dxnindiaofficial" target="_blank" rel="noopener noreferrer" tabindex="0">DXN India Official Channel</a></p>
   </section>
