--- a/contact.html
+++ b/contact.html
@@ -33,9 +33,9 @@
 <main class="container" id="join">
   <h2>Contact Us</h2>
   <section class="contact-info" aria-label="Contact information">
-    <p><strong>Phone:</strong> +91 9876543210</p>
-    <p><strong>Facebook:</strong> <a href="https://www.facebook.com/dxnindia" target="_blank" rel="noopener noreferrer" tabindex="0">DXN India</a></p>
-    <p><strong>YouTube:</strong> <a href="https://www.youtube.com/dxnindiaofficial" target="_blank" rel="noopener noreferrer" tabindex="0">DXN India Official Channel</a></p>
+    <p><strong>Phone:</strong> +91 9412217510</p>
+    <p><strong>Facebook:</strong> <a href="https://www.facebook.com/share/15kaFk3Cik/?mibextid=wwXIfr" target="_blank" rel="noopener noreferrer" tabindex="0">DXN India</a></p>
+    <p><strong>YouTube:</strong> <a href="https://www.youtube.com/@bharatgarg8240" target="_blank" rel="noopener noreferrer" tabindex="0">DXN India Official Channel</a></p>
   </section>
 
   <section aria-label="Contact form">
@@ -66,27 +66,13 @@
   </div>
 </footer>
 
-<script src="scripts.js"></script>
-<script>
-  (function() {
-    const form = document.getElementById('contact-form');
-    const statusEl = document.getElementById('form-status');
 
-    form.addEventListener('submit', e => {
-      e.preventDefault();
-      if(!form.checkValidity()) {
-        statusEl.style.color = '#ff6363';
-        statusEl.textContent = 'Please fill out all required fields correctly.';
-        form.reportValidity();
-        return;
-      }
-
-      // Simulate submission success
-      statusEl.style.color = '#92d572';
-      statusEl.textContent = 'Thank you for contacting us! We will get back to you soon.';
-      form.reset();
-    });
-  })();
-</script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+    <script>
+        (function() {
+            emailjs.init("dpFBF92yBEf02Bd6I"); // Replace with your actual EmailJS public key
+        })();
+    </script>
+    <script src="contactus.js"></script>
 </body>
 </html>
