--- a/contact.html
+++ b/contact.html
@@ -34,8 +34,8 @@
   <h2>Contact Us</h2>
   <section class="contact-info" aria-label="Contact information">
     <p><strong>Phone:</strong> +91 9412217510</p>
-    <p><strong>Facebook:</strong> <a href="https://www.facebook.com/share/15kaFk3Cik/?mibextid=wwXIfr" target="_blank" rel="noopener noreferrer" tabindex="0">DXN India</a></p>
-    <p><strong>YouTube:</strong> <a href="https://www.youtube.com/@bharatgarg8240" target="_blank" rel="noopener noreferrer" tabindex="0">DXN India Official Channel</a></p>
+    <p><strong>Facebook:</strong> <a href="https://www.facebook.com/share/15kaFk3Cik/?mibextid=wwXIfr" target="_blank" rel="noopener noreferrer" tabindex="0">Bharat Garg DXN</a></p>
+    <p><strong>YouTube:</strong> <a href="https://www.youtube.com/@bharatgarg8240" target="_blank" rel="noopener noreferrer" tabindex="0">Bharat Garg DXN Youtube</a></p>
   </section>
 
   <section aria-label="Contact form">
