--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,11 @@
   </div>
 </footer>
 
-
+<script>
+  (function(){
+    emailjs.init('dpFBF92yBEf02Bd6I'); // Replace with your EmailJS user ID
+  })();
+</script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <script src="contactus.js"></script>
 </body>
